# Negative-List-Scan

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  findings.md  progress.md  pyproject.toml  requirements.txt  setup.py  task_plan.md
.claude/commands/: build.md  lint.md  run.md  test.md
docs/: ARCHITECTURE-v2.md  ARCHITECTURE.md  PRD-v2.md  PRD.md  errors.md
openspec/changes/browser-automation-migration/: design.md  proposal.md  tasks.md
openspec/changes/browser-automation-migration/specs/browser-automation-forensics/: spec.md
openspec/changes/browser-automation-migration/specs/cdp-pdf-generation/: spec.md
openspec/changes/browser-automation-migration/specs/forensics-metadata/: spec.md
openspec/changes/browser-automation-migration/specs/headed-browser-default/: spec.md
openspec/changes/browser-automation-migration/specs/multi-template-sequential/: spec.md
openspec/changes/browser-automation-migration/specs/persistent-browser-profile/: spec.md
openspec/changes/browser-automation-migration/specs/user-intervention-captcha/: spec.md
src/google_search/: __init__.py  __main__.py  browser.py  cli.py  config.py  exceptions.py  models.py  parser.py  pdf.py  searcher.py  templates.py
templates/: default.yaml
tests/: test_browser.py  test_cli.py  test_config.py  test_integration.py  test_pdf.py  test_searcher.py  test_templates.py
